# viz

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  builder.cpp  builder.h  graph.cpp  graph.h  graph_impl.h  graph_io.cpp  graph_io.h  graph_layout.cpp  graph_layout.h  graph_order.cpp  graph_order.h  graph_test.cpp  graph_utils.cpp  graph_utils.h  main.cpp  main.h  more_graph_utils.cpp  more_graph_utils.h  scene.cpp  scene.h  scene_obj.cpp  scene_obj.h  test.col  types.h  util.cpp  util.h  util_templates.h  vector2d.cpp  vertex.cpp  vertex.h  viz_canvas.cpp  viz_canvas.h  viz_cmd.cpp  viz_cmd.h  viz_cmd_list.cpp  (+6 more)
input/: commands  small.json  test.json
layouts/: viz_main.glade
src/: main.cpp  main.h.in
src/cmd/: bad.h  cmd.cpp  cmd.h  cmd_hist.cpp  cmd_hist.h  cmd_mgr.cpp  cmd_mgr.h  cmd_parse.cpp  cmd_parse.h  format.cpp  format.h  help.cpp  help.h  hide.cpp  hide.h  load.cpp  load.h  quit.cpp  quit.h  save.cpp  save.h  show.cpp  show.h
src/events/: viz_cmd_list.cpp
src/gtk/: viz_canvas.cpp  viz_canvas.h  viz_prompt.cpp  viz_prompt.h  viz_tab.cpp  viz_tab.h  viz_window.cpp  viz_window.h
src/io/: outputter.h  viz_io.cpp  viz_io.h
src/scene/: edge_obj.cpp  edge_obj.h  scene.cpp  scene.h  scene_obj.cpp  scene_obj.h  vertex_obj.cpp  vertex_obj.h
src/util/: builder.cpp  builder.h  match.cpp  match.h  more_graph_utils.cpp  more_graph_utils.h  types.h  util.h  vector2d.h
